# science_scraper

./: .gitignore  README.md  docker-compose.yml  download_articles.py  get_articles.py  pyproject.toml  run_module.py
scraper/: common.py  create_embeddings.py  download_articles.py  extract_text.py  get_articles.py  load_store.py
